erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment
KarLaeda
	* Fixing bugs
	* Adding new NPC


== Changelog ==

Date		Added
======
2007/02/17
	* Updated WoE scripts since the "guardian" script command no longer has a
	  "amount" argument. [Skotlex]
2007/02/15
	* Corrected all Schwarzwald typos (except for the WIP one) [ultramage]
2007/01/30
	* Fixed a mistake in one quiz in the the sign quest [ultramage]
2007/01/29
	* Updated the comodo gambling script
	- synced the structure with the aegis script (with neccessary adjustments)
	- added a missing emotion and cutins (using jA's method)
	- added a missing npc
	* Moved the custom events entries into scripts_custom.conf
	* Removed old custom geffenia warper since TSQ is done
	* Removed the duplicit and untranslated alchemist.txt event [ultramage]
2007/01/26
	* More typo fixes
	* Added a missing dialogue branch in novice.txt
	* Fixed a monster spawn typo in hu_fild05 and lou_fild01 [ultramage]
	  Ref: http://www.eathena.ws/board/index.php?showtopic=136426
2007/01/24
	* Fixed one missing 'On' in prtg_managers.txt [ultramage]
2007/01/21
	* Synchronization of the trunk&stable npc directories [ultramage]
	- fixed one sign quest OnMonsterDead bug (copy from stable)
	- removed the temp sign quest script
	- some minor typo hunting
2007/01/12
	* Fixed exploits in Valentine Event Scripts [KarLaeda]
2007/01/11
	* Update to the new locations, adds more warps (thor_camp) [ultramage]
2007/01/09
	* Updated some functions calls that where using the wrong number of 
	  arguments with checkcart,checkfalcon,checkriding,getgmlevel,
	  basicskillcheck. [FlavioJS]
2007/01/05
	* Updated SL job Quest according to iRO, thanks to Sousuke_PL [Lupus]
2007/01/03